--- a/src/main/resources/templates/user/notice/index.html
+++ b/src/main/resources/templates/user/notice/index.html
@@ -80,15 +80,11 @@
     <script th:src="@{/js/user/home/vendor/modernizr-2.8.3.min.js}"></script>
     <style>
         table {
-            background: #bcc2e4;
+            background: #bcc2d8;
             border-radius: 20px;
             width: 85%;
             height: 100px;
             color: darkslategrey;
-        }
-        pre {
-            background: #bcc2e4;
-            border: 0;
         }
         .context{
             position: relative;
@@ -138,10 +134,8 @@
                 <table th:each="notice : ${noticeList}">
                     <tr style="height: 36px">
                         <td style="width: 50px;"></td>
-                        <td style="position:relative;font-size: 24px">
-                            <br/><br/>
-                            <b>[[${notice.getTitle()}]]</b>
-                            <br/><br/>
+                        <td style="position:relative;font-size: 24px"
+                            th:text="${notice.getTitle()}">
                         </td>
                         <td>
                             <a href="#" th:onclick="delNotice('[[${notice.getId()}]]')" style="font-weight: bold;font-size: 30px;float: right;
@@ -167,14 +161,12 @@
                     </tr>
                     <tr>
                         <td colspan="3">
-                            <hr style="color: black"/>
+                            <hr/>
                         </td>
                     </tr>
                     <tr style="overflow-x: hidden;">
                         <td style="width: 50px;"></td>
-                        <td class="context">
-                            <pre>[[${notice.getContext()}]]</pre>
-                        </td>
+                        <td class="context" th:text="'系统消息：'+${notice.getContext()}"></td>
                     </tr>
                     <tr>
                         <td colspan="3">
