--- a/src/main/resources/templates/admin/notice/index.html
+++ b/src/main/resources/templates/admin/notice/index.html
@@ -32,13 +32,13 @@
             <textarea style="background: white;height: 50px" name="title" placeholder="通知标题"></textarea>
             <textarea style="background: white;height: 300px" name="context" placeholder="通知内容"></textarea>
             <label>
-                <input name="type" value="0" type="radio" style="width: 10px;height: 10px" checked="checked"><b style="color: red;">管理员</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input name="type" value="0" type="radio" style="width: 10px;height: 10px" disabled><b style="color: red;">管理员</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </label>
             <label>
-                <input name="type" value="1" type="radio" style="width: 10px;height: 10px"><b style="color: mediumpurple;">商户</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <input name="type" value="1" type="radio" style="width: 10px;height: 10px" disabled><b style="color: mediumpurple;">商户</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             </label>
             <label>
-                <input name="type" value="2" type="radio" style="width: 10px;height: 10px"><b style="color: limegreen;">会员</b>
+                <input name="type" value="2" type="radio" style="width: 10px;height: 10px" checked><b style="color: limegreen;">会员</b>
             </label>
             <label style="float: right">
                 <input style="background: deepskyblue;color: white;font-weight: bold" value="发送" type="submit">
