完善后台模块、商户模块的注册机制

--- a/src/main/resources/templates/merchant/login/index.html
+++ b/src/main/resources/templates/merchant/login/index.html
@@ -110,7 +110,7 @@
                 button.innerText = "重新发送验证码";
                 clearInterval(time);
             } else {
-                button.innerText = "重新发送验证码（"+num+"）";
+                button.innerText = "重新发送验证码("+num+")";
             }
             sessionStorage.setItem("admin_sign_num", --num);
         } , 1000);
