--- a/src/main/resources/templates/user/home/index.html
+++ b/src/main/resources/templates/user/home/index.html
@@ -1921,6 +1921,7 @@
                 <div class="col-lg-12">
                     <div class="single-latest-blog">
                         <div class="latest-blog-img">
+                            <div th:value="${lowImg.get(0)}" disabled="disabled"></div>
                             <a target="_blank" th:if="${lowImg.get('0')}!=null"
                                th:href="@{/user/shop(id=${lowImg.get('0').getMerchant()})}">
                                 <img th:src="@{${lowImg.get('0').getUrl()}}" style="width: 400px; height: 206px" alt=""/>
