--- a/src/main/resources/templates/user/about/index.html
+++ b/src/main/resources/templates/user/about/index.html
@@ -78,33 +78,7 @@
     <body>
 		<!-- header start -->
 		<header th:include="user/common/model::header"></header>
-		<!-- header end -->+
-	<!-- about-us-area start -->
-	<div class="about-us-area">
-		<div class="container">
-			<div class="row">
-				<!-- about-img start -->
-				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="about-img">
-						<img th:src="@{/image/user/home/about/1.jpeg}" alt="" />
-					</div>
-				</div>
-				<!-- about-img end -->
-				<!-- about-text start -->
-				<div class="col-md-6 col-sm-12 col-xs-12">
-					<div class="about-text">
-						<h2>We are Jieyue-shop</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum sit amet nibh eget interdum. Nullam ligula risus, efficitur id posuere nec, pulvinar at tellus. Morbi ut tortor nibh. Pellentesque accumsan nisl nulla, et vehicula libero iaculis eu. Cras faucibus, sem et imperdiet cursus, libero risus commodo elit, euismod tempor Donec aliquet, nibh ut imperdiet venenatis, arcu lectus bibendum velit, et gravida sapien justo a libero. Suspendisse ornare, urna id finibus vestibulum.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque elementum sit amet nibh eget interdum. Nullam ligula risus, efficitur id posuere nec, pulvinar at tellus. Morbi ut tortor nibh. Pellentesque accumsan nisl nulla.</p>
-						<p>Donec aliquet, nibh ut imperdiet venenatis, arcu lectus bibendum velit, et gravida sapien justo a libero. Suspendisse ornare, urna id finibus vestibulum.</p>
-					</div>
-				</div>
-				<!-- about-text end -->
-			</div>
-		</div>
-	</div>
-	<!-- about-us-area end -->
-
+		<!-- header end -->
 	<!-- about-team-area start -->
 	<div class="about-team-area">
 		<div class="container">
@@ -113,11 +87,11 @@
 				<div class="col-md-3 col-sm-4">
 					<div class="single-about-team">
 						<div class="about-team-img">
-							<img th:src="@{/image/user/home/about/team_member_1.jpg}" alt="" />
+							<img th:src="@{/image/user/home/about/blog.jpg}" alt="" />
 						</div>
 						<div class="about-team-info">
-							<h3>BOSEN ONCE</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu nisi ac mi malesuada vestibulum.</p>
+							<h3>Bosen</h3>
+							<p>大三在读程序猿一枚~！！</p>
 						</div>
 					</div>
 				</div>
@@ -126,11 +100,13 @@
 				<div class="col-md-3 col-sm-4">
 					<div class="single-about-team">
 						<div class="about-team-img">
-							<img th:src="@{/image/user/home/about/team_member_4.jpg}" alt="" />
+							<a href="https://bosen-once.gitee.io/" target="_blank">
+								<img th:src="@{/image/user/home/about/home.png}" alt="" />
+							</a>
 						</div>
 						<div class="about-team-info">
-							<h3>BOSEN ONCE</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu nisi ac mi malesuada vestibulum.</p>
+							<h3>云丶言</h3>
+							<p>个人主页</p>
 						</div>
 					</div>
 				</div>
@@ -139,11 +115,13 @@
 				<div class="col-md-3 col-sm-4">
 					<div class="single-about-team">
 						<div class="about-team-img">
-							<img th:src="@{/image/user/home/about/team_member_2.jpg}" alt="" />
+							<a href="https://blog.csdn.net/weixin_47600880" target="_blank">
+								<img th:src="@{/image/user/home/about/csdn.png}" alt="" />
+							</a>
 						</div>
 						<div class="about-team-info">
-							<h3>BOSEN ONCE</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu nisi ac mi malesuada vestibulum.</p>
+							<h3>云丶言</h3>
+							<p>CSDN博客</p>
 						</div>
 					</div>
 				</div>
@@ -152,11 +130,11 @@
 				<div class="col-md-3 col-sm-3 hidden-sm">
 					<div class="single-about-team">
 						<div class="about-team-img">
-							<img th:src="@{/image/user/home/about/team_member_3.jpg}" alt="" />
+							<img th:src="@{/image/user/home/about/wx.png}" alt="" />
 						</div>
 						<div class="about-team-info">
-							<h3>BOSEN ONCE</h3>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eu nisi ac mi malesuada vestibulum.</p>
+							<h3>云丶言</h3>
+							<p>微信公众号</p>
 						</div>
 					</div>
 				</div>
