--- a/src/main/resources/templates/user/login/index.html
+++ b/src/main/resources/templates/user/login/index.html
@@ -55,6 +55,9 @@
           <button type="button" id="button" class="btn_sign_up" onclick="button()">注册</button>
         </div>
       </div>
+      <a th:href="@{/}" style="position: relative; top: 15px">
+        &nbsp;暂&nbsp;以&nbsp;游&nbsp;客&nbsp;身&nbsp;份&nbsp;访&nbsp;问&nbsp;
+      </a>
     </div>
   </div>
 </div>
