--- a/src/main/resources/templates/user/notice/index.html
+++ b/src/main/resources/templates/user/notice/index.html
@@ -80,14 +80,14 @@
     <script th:src="@{/js/user/home/vendor/modernizr-2.8.3.min.js}"></script>
     <style>
         table {
-            background: #bcc2e4;
+            background: #c8d4e4;
             border-radius: 20px;
             width: 85%;
             height: 100px;
             color: darkslategrey;
         }
         pre {
-            background: #bcc2e4;
+            background: #c8d4e4;
             border: 0;
         }
         .context{
