--- a/src/main/resources/templates/admin/common/model.html
+++ b/src/main/resources/templates/admin/common/model.html
@@ -78,6 +78,11 @@
 </div>
 <script th:fragment="alertMsg" th:inline="javascript">
 
+    function loading() {
+        var img = document.getElementById("loading");
+        img.style.display = "";
+    }
+
     window.onload = function () {
         if ("[[${param.msg}]]" != "") {
             alert("[[${param.msg}]]");
