--- a/src/main/resources/templates/admin/ui/index.html
+++ b/src/main/resources/templates/admin/ui/index.html
@@ -32,6 +32,7 @@
 </head>
 
 <body>
+    <img id="loading" th:src="@{/loading.gif}" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 999; display: none; opacity: 0.8"/>
     <div id="wrapper">
         <div th:include="admin/common/model::nav"></div>
 
@@ -45,14 +46,14 @@
                         <h4>推荐尺寸：1920x737</h4>
                         <form th:action="@{/admin/up-image}" method="post" enctype="multipart/form-data" style="text-align: right">
                             <input type="file" name="file" style="display: none;" id="input1920" onchange="showImg(this,'img1920')">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                             <input type="number" value="1920" name="width" hidden="hidden">
                             <input type="number" value="737" name="height" hidden="hidden">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="1920" name="width" hidden="hidden">
                             <input type="number" value="737" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <!--1920*737-->
@@ -73,12 +74,12 @@
                             <input type="file" name="file" style="display: none;" id="input1230" onchange="showImg(this,'img1230')">
                             <input type="number" value="1230" name="width" hidden="hidden">
                             <input type="number" value="535" name="height" hidden="hidden">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="1230" name="width" hidden="hidden">
                             <input type="number" value="535" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <!--1230*535-->
@@ -99,12 +100,12 @@
                             <input type="file" name="file" style="display: none;" id="input3151" onchange="showImg(this,'img3151')">
                             <input type="number" value="3151" name="width" hidden="hidden">
                             <input type="number" value="282" name="height" hidden="hidden">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="3151" name="width" hidden="hidden">
                             <input type="number" value="282" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <img th:if="${imgMap.get('3151')} eq null" th:src="@{/image/user/home/banner/3.jpg}" id="img3151" onclick="upImg('input3151')"  >
@@ -124,12 +125,12 @@
                             <input type="file" name="file" style="display: none;" id="input3152" onchange="showImg(this,'img3152')">
                             <input type="number" value="3152" name="width" hidden="hidden">
                             <input type="number" value="282" name="height" hidden="hidden">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="3152" name="width" hidden="hidden">
                             <input type="number" value="282" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <img th:if="${imgMap.get('3152')} eq null" th:src="@{/image/user/home/banner/3.jpg}" id="img3152" onclick="upImg('input3152')"  >
@@ -149,12 +150,12 @@
                             <input type="file" name="file" style="display: none;" id="input475" onchange="showImg(this,'img475')">
                             <input type="number" value="475" name="width" hidden="hidden">
                             <input type="number" value="570" name="height" hidden="hidden">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="475" name="width" hidden="hidden">
                             <input type="number" value="570" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <img th:if="${imgMap.get('475')} eq null" th:src="@{/image/user/home/banner/1.jpg}" id="img475" onclick="upImg('input475')" >
@@ -174,12 +175,12 @@
                             <input type="file" name="file" style="display: none;" id="input674" onchange="showImg(this,'img674')">
                             <input type="number" value="674" name="width" hidden="hidden">
                             <input type="number" value="264" name="height" hidden="hidden">
-                            <input type="submit" value="修改">
+                            <input type="submit" value="修改" onclick="loading()">
                         </form>
                         <form th:action="@{/admin/del-image}" method="post" style="text-align: right">
                             <input type="number" value="674" name="width" hidden="hidden">
                             <input type="number" value="264" name="height" hidden="hidden">
-                            <input type="submit" value="删除" onclick="if (confirm('确认删除?')==false)return false; "/>
+                            <input type="submit" value="删除" onclick="if (confirm('确认删除?') == false) {return false;} else {loading();}"/>
                         </form>
                         <div style="width: 100%;text-align: center">
                             <img th:if="${imgMap.get('674')} eq null" th:src="@{/image/user/home/banner/2.jpg}" id="img674" onclick="upImg('input674')"  >
