--- a/src/main/resources/templates/merchant/common/model.html
+++ b/src/main/resources/templates/merchant/common/model.html
@@ -97,6 +97,11 @@
 <!--sidebar end-->
 <script th:fragment="alertMsg" th:inline="javascript">
 
+    function loading() {
+        var img = document.getElementById("loading");
+        img.style.display = "";
+    }
+
     window.onload = function () {
         if ("[[${param.msg}]]" != "") {
             alert("[[${param.msg}]]");
