--- a/src/main/resources/templates/merchant/ui/index.html
+++ b/src/main/resources/templates/merchant/ui/index.html
@@ -42,6 +42,7 @@
     </style>
 </head>
 <body>
+<img id="loading" th:src="@{/loading.gif}" style="position: fixed; left: 0; top: 0; width: 100%; height: 100%; z-index: 999; display: none; opacity: 0.8"/>
 <section id="container">
     <!--header start-->
     <header class="header fixed-top clearfix" th:include="merchant/common/model::header"></header>
@@ -61,7 +62,7 @@
                             <img th:src="@{${session.merchant.getHeader()}}" width="240" height="240" onclick="upImg('headerInput')" id="header" style="border-radius: 100%">
                             <input style="display: none;" id="headerInput" type="file" name="img" onchange="showImg(this,'header')">
                             <br/>
-                            <input type="submit" value="修改" style="background: purple;border-radius: 5px;color: white">
+                            <input type="submit" value="修改" onclick="loading()" style="background: purple;border-radius: 5px;color: white">
                         </form>
                     </td>
                 </tr>
@@ -76,8 +77,7 @@
                             <input type="number" name="width" value="400" hidden>
                             <input type="number" name="height" value="320" hidden>
                             <br/>
-                            <input type="submit" value="修改" style="background: purple;border-radius: 5px;color: white">
-                            <a style="color: purple" th:if="${homeImg}!=null" th:href="@{/merchant/del-home-img(id=${homeImg.getId()})}">删除</a>
+                            <input type="submit" onclick="loading()" value="修改" style="background: purple;border-radius: 5px;color: white">
                         </form>
                     </td>
                     <td>
@@ -90,8 +90,7 @@
                             <input type="number" name="width" value="600" hidden>
                             <input type="number" name="height" value="310" hidden>
                             <br/>
-                            <input type="submit" value="修改" style="background: purple;border-radius: 5px;color: white">
-                            <a style="color: purple" th:if="${lowImg}!=null" th:href="@{/merchant/del-home-img(id=${lowImg.getId()})}">删除</a>
+                            <input type="submit" onclick="loading()" value="修改" style="background: purple;border-radius: 5px;color: white">
                         </form>
                     </td>
                 </tr>
